istio/ocm-dashboard-gw-vs.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: infrachk-gateway
  namespace: ocm-dashboard
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - ocm-dashboard.app.dev.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: infrachk-vs
  namespace: ocm-dashboard
spec:
  gateways:
  - infrachk-gateway
  hosts:
  - ocm-dashboard.app.dev.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ocm-dashboard.ocm-dashboard.svc.cluster.local
        port:
          number: 80
